# chaos_bundle_tools

./: #testio.sh#  .ChaosCreateGitHubRepository_tmpl  .ChaosCreateOfficialRepository_tmpl  .gitignore  ChaosCreateGitHubRepository_tmpl copy  ChaosCreateOfficialRepository_tmpl  ChaosMakeNewRTCU  ChaosMakeNewSCCU  accept_merge_request.sh  chaos_build.sh  chaos_build_conf.sh  chaos_bundle_env.sh  chaos_bundle_env_bbb.sh  chaos_clean.sh  chaos_compile_all.sh  chaos_create_template.sh  chaos_debianizer.sh  chaos_deploy.sh  chaos_deploy_target.sh  chaos_generate_us.sh  chaos_git.sh  chaos_launch_unit.sh  chaos_mds_service.sh  chaos_remote_command.sh  chaos_remote_copy.sh  chaos_run_configuration.sh  chaos_services.sh  chaos_test.sh  checkKafkaTopics.sh  cmake_config.sh  cmake_config_arm.sh  common_util.sh  create_new_module.sh  create_package.sh  create_template.sh  csvaverage.sh  dbinit.sh  deploy_libera.sh  gitignore_tmpl  images2html.sh  (+9 more)
config/: CMakeLists.txt  ChangeLog  Findchaos.cmake  MDSConfig.txt  MDSConfig_software.txt  chaos-infrastructure.txt  chaos.cmake  cu_catalog.json  data_server_localhost.txt  deploy_chaos.sh  local_test_config.sh  unit_servers_software.txt
config/cern_root/: chaos.C  config.root
config/dante/: MG1DYN.json
config/docker-compose/: chaos_agent.cfg  chaos_cds.cfg  chaos_root.cfg  chaos_webui.cfg
config/lnf/: MDSConfig.txt  MDSConfig_soft.txt  cu.cfg  cu.sh  data_server_development.txt  libera_deploy.sh
config/lnf/development/: MDSConfig.json  MDSConfig.txt  cds.cfg  chaos-infrastructure.txt  config1US.txt  cu.cfg  cu1.sh  cu2.sh  mds.cfg  wan.cfg  webui.cfg
config/lnf/docker/: cds.cfg  cu.cfg  cuiserver.cfg  mds.cfg  wan.cfg  webui.cfg
config/lnf/flame/: Dashboard.json  FLAME-21-7-2022.json  FLAME.json
config/lnf/preproduction/: BTF.json  DAFNE.json  FLAME_CAMERA.json  FLAME_CAMERA0.json  FLAME_CAMERA1.json  FLAME_CAMERA2.json  FLAME_MOTOR.json  agent.cfg  (+21 more)
config/localhost/: BTFDAQ.json  FLAME_LASER_GFIT.ini  MDSConfig-full.json  TEST.ini  TEST_EXTERNAL.ini  TEST_EXTERNAL.json  agent.cfg  chaosDashboard.json  chaosDashboardMoreCams.json  cu.cfg  mds.cfg  testBTFDashboard.json  testDafne.json  testFlameDashboard.json  wan.cfg  webui.cfg
(+174 files in other folders)
